// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabPane correctly applies the theme context className 1`] = `
<div
  aria-selected={false}
  className="tab is-text-only orion-fusion-theme customClass"
  data-terra-tab-pane={true}
  data-terra-tabs-show-focus-styles={true}
  onBlur={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  role="tab"
  tabIndex={-1}
>
  <span
    className="label"
  >
    Default
  </span>
</div>
`;

exports[`TabPane should render a default component with label 1`] = `
<div
  aria-selected={false}
  className="tab is-text-only"
  data-terra-tab-pane={true}
  data-terra-tabs-show-focus-styles={true}
  onBlur={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  role="tab"
  tabIndex={-1}
>
  <span
    className="label"
  >
    Default
  </span>
</div>
`;

exports[`TabPane should render as disabled when indicated 1`] = `
<div
  aria-selected={false}
  className="tab is-disabled is-text-only"
  data-terra-tab-pane={true}
  data-terra-tabs-show-focus-styles={false}
  onBlur={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  role="tab"
  tabIndex={-1}
>
  <span
    className="label"
  >
    Label
  </span>
</div>
`;

exports[`TabPane should render with a custom display when provided 1`] = `
<div
  aria-selected={false}
  className="tab is-text-only"
  data-terra-tab-pane={true}
  data-terra-tabs-show-focus-styles={true}
  onBlur={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  role="tab"
  tabIndex={-1}
>
  <div>
    Custom Display
  </div>
</div>
`;

exports[`TabPane should render with custom props 1`] = `
<div
  aria-selected={false}
  className="tab is-text-only customClass"
  data-terra-tab-pane={true}
  data-terra-tabs-show-focus-styles={true}
  onBlur={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  role="tab"
  tabIndex={-1}
>
  <span
    className="label"
  >
    Default
  </span>
</div>
`;

exports[`TabPane should render with icon and label 1`] = `
<div
  aria-selected={false}
  className="tab"
  data-terra-tab-pane={true}
  data-terra-tabs-show-focus-styles={true}
  onBlur={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  role="tab"
  tabIndex={-1}
>
  <div>
    Fake icon
  </div>
  <span
    className="label"
  >
    Label
  </span>
</div>
`;

exports[`TabPane should render with icon only when indicated 1`] = `
<div
  aria-label="Label"
  aria-selected={false}
  className="tab is-icon-only"
  data-terra-tab-pane={true}
  data-terra-tabs-show-focus-styles={true}
  onBlur={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  role="tab"
  tabIndex={-1}
>
  <div>
    Fake icon
  </div>
</div>
`;
